# IntrinsicAttention

./: .gitignore  .pre-commit-config.yaml  Makefile  ReadMe.md  Ressources.bib  pyproject.toml  result.json  test.ipynb
plots/: attention_attention_last_timestep.ipynb  attention_first_intrinsic_reward.ipynb
proposal/: POC.ipynb
sandbox/: meta_train.py
sandbox/proposal/: algorithm.py  full_episode_connector.py  test.py
sandbox/proposal/models/: IntrinsicAttention.py  model.py
sandbox/toy_example/: PPOAgent.py
source/: test.py  train.py
source/brainstorming/: algorithm.py  config.py  meta_train.py  train.py
source/brainstorming/algorithm/: IntrinsicAttentionPPO.py  IntrinsicAttentionPPOConfig.py
source/brainstorming/base_models/: GRUBase.py  IntrinsicAttention.py
source/brainstorming/environments/: t_maze_pas.py  umbrella_chain.py
source/brainstorming/learners/: AddIntrinsicRewardBatchData.py  CustomPPOLearner.py  IntrinsicRewardLearnerConnector.py  intrinsic_meta_learner.py  intrinsic_ppo_learner.py
source/brainstorming/models/: DifferentiableIntrinsicAttention.py  DifferentiablePPOModel.py  IntrinsicAttention.py  IntrinsicAttentionModule.py  model.py
source/brainstorming/rl_modules/: DifferentiablePPOModule.py  IntrinsicAttentionModule.py
source/environments/: t_maze_pas.py  umbrella_chain.py
source/experiments/: PPOBaseModel.py  ReadMe.md
source/experiments/configs/: TMaze_intrinsic_Experiment.yaml  Umbrella_PPO_Experiment.yaml  Umbrella_PPO_HPO.yaml  Umbrella_intrinsic_Experiment.yaml  Umbrella_intrinsic_HPO.yaml  basic_experiment.yaml
source/experiments/plots/: sample_efficency.py
source/experiments/src/: TMaze_intrinsic_Experiment.py  Umbrella_PPO_Experiment.py  Umbrella_PPO_HPO.py  Umbrella_intrinsic_Experiment.py  Umbrella_intrinsic_HPO.py  base_experiment.py
source/experiments/utils/: stopper.py  test.py  utils.py
source/intrinsic_attention_ppo/: ReadMe.md  config.py
source/intrinsic_attention_ppo/algorithm/: IntrinsicAttentionPPO.py  IntrinsicAttentionPPOConfig.py  IntrinsicAttentionPPOHydraConfig.py
source/intrinsic_attention_ppo/base_models/: GRUBase.py  IntrinsicAttention.py  ReluMlp.py
source/intrinsic_attention_ppo/learners/: CustomPPOLearner.py  IntrinsicAttentionMetaLearner.py  IntrinsicAttentionPPOLearner.py  intrinsic_meta_learner.py  intrinsic_ppo_learner.py  remove_gae_from_learner_connector.py
source/intrinsic_attention_ppo/rl_modules/: DifferentiablePPOModule.py  IntrinsicAttentionModule.py
source/proposal/: POC.py  algorithm.py  environment.py  full_episode_connector.py  model.py  test.py
source/test/: test_gae_implementation.py  test_meta_gradient_updates.py  test_split_and_zero_pad_equivalence.py  test_split_and_zero_pad_n_episodes.py
source/toy_example/: PPOAgent.py  toy_PPOLearner.py
tests/: test_gae_implementation.py  test_meta_gradient_updates.py  test_split_and_zero_pad_equivalence.py  test_split_and_zero_pad_n_episodes.py
(+1789 files in other folders)
